--- a/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
@@ -42,6 +42,9 @@
     port_binding: static
     mac_learning:
       enabled: true
+      allow_unicast_flooding: true
+      limit: 4096
+      limit_policy: allow
     state: present
   register: enable_mac_learning_result
 
@@ -66,6 +69,9 @@
     port_binding: static
     mac_learning:
       enabled: true
+      allow_unicast_flooding: true
+      limit: 4096
+      limit_policy: allow
     state: present
   register: enable_mac_learning_again_result
 
