--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -269,3 +269,35 @@ releases:
     fragments:
     - 2260-deprecate-vmware_cluster_info.yml
     release_date: '2025-01-23'
+  4.8.3:
+    changes:
+      bugfixes:
+      - vmware_guest - setting vApp properties on virtual machines without vApp options
+        raised an AttributeError. Fix now gracefully handles a `None` value for vApp
+        options when retrieving current vApp properties (https://github.com/ansible-collections/community.vmware/pull/2220).
+      - vmware_object_role_permission - The module ignores changing ``recursive``
+        (https://github.com/ansible-collections/community.vmware/pull/2350).
+      deprecated_features:
+      - vcenter_folder - the module has been deprecated and will be removed in community.vmware
+        7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2340).
+      - vmware_cluster_ha - the module has been deprecated and will be removed in
+        community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2321).
+      - vmware_content_deploy_ovf_template - the module has been deprecated and will
+        be removed in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2332).
+      - vmware_content_deploy_template - the module has been deprecated and will be
+        removed in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2332).
+      - vmware_content_library_manager - the module has been deprecated and will be
+        removed in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2345).
+      - vmware_host - the module has been deprecated and will be removed in community.vmware
+        7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2337).
+      - vmware_host_inventory - the inventory plugin is deprecated and will be removed
+        in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2283).
+      - vmware_maintenancemode - the module has been deprecated and will be removed
+        in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2293).
+      - vmware_vm_inventory - the inventory plugin is deprecated and will be removed
+        in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2283).
+    fragments:
+    - 2220-vmware_guest.yml
+    - 2351-vmware_object_role_permission.yml
+    - 2357-deprecations.yml
+    release_date: '2025-03-23'
