--- a/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
@@ -42,9 +42,6 @@
     port_binding: static
     mac_learning:
       enabled: true
-      allow_unicast_flooding: true
-      limit: 4096
-      limit_policy: allow
     state: present
   register: enable_mac_learning_result
 
@@ -69,9 +66,6 @@
     port_binding: static
     mac_learning:
       enabled: true
-      allow_unicast_flooding: true
-      limit: 4096
-      limit_policy: allow
     state: present
   register: enable_mac_learning_again_result
 
@@ -118,6 +112,117 @@
     vlan_id: 0
     num_ports: 32
     port_binding: static
+    mac_learning:
+      enabled: false
+    state: present
+  register: disable_mac_learning_again_result
+
+- debug:
+    var: disable_mac_learning_again_result
+
+- name: ensure MAC learning is not disabled again
+  assert:
+    that:
+        - not disable_mac_learning_again_result.changed
+
+# Issue 1873
+- name: enable MAC learning + inheriting network policy
+  community.vmware.vmware_dvs_portgroup:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    switch_name: "{{ dvswitch1 }}"
+    portgroup_name: "basic"
+    vlan_id: 0
+    num_ports: 32
+    port_binding: static
+    network_policy:
+      inherited: true
+    mac_learning:
+      enabled: true
+      allow_unicast_flooding: true
+      limit: 4096
+      limit_policy: allow
+    state: present
+  register: enable_mac_learning_result
+
+- debug:
+    var: enable_mac_learning_result
+
+- name: ensure MAC learning is enabled
+  assert:
+    that:
+        - enable_mac_learning_result.changed
+
+- name: enable MAC learning + inheriting network policy again (idempotency)
+  community.vmware.vmware_dvs_portgroup:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    switch_name: "{{ dvswitch1 }}"
+    portgroup_name: "basic"
+    vlan_id: 0
+    num_ports: 32
+    port_binding: static
+    network_policy:
+      inherited: true
+    mac_learning:
+      enabled: true
+      allow_unicast_flooding: true
+      limit: 4096
+      limit_policy: allow
+    state: present
+  register: enable_mac_learning_again_result
+
+- debug:
+    var: enable_mac_learning_again_result
+
+- name: ensure MAC learning is not enabled again
+  assert:
+    that:
+        - not enable_mac_learning_again_result.changed
+
+- name: disable MAC learning + inheriting network policy
+  community.vmware.vmware_dvs_portgroup:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    switch_name: "{{ dvswitch1 }}"
+    portgroup_name: "basic"
+    vlan_id: 0
+    num_ports: 32
+    port_binding: static
+    network_policy:
+      inherited: true
+    mac_learning:
+      enabled: false
+    state: present
+  register: disable_mac_learning_result
+
+- debug:
+    var: disable_mac_learning_result
+
+- name: ensure MAC learning is disabled
+  assert:
+    that:
+        - disable_mac_learning_result.changed
+
+- name: disable MAC learning + inheriting network policy again (idempotency)
+  community.vmware.vmware_dvs_portgroup:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    switch_name: "{{ dvswitch1 }}"
+    portgroup_name: "basic"
+    vlan_id: 0
+    num_ports: 32
+    port_binding: static
+    network_policy:
+      inherited: true
     mac_learning:
       enabled: false
     state: present
