--- a/changelogs/fragments/2372-stop_using_connect_to_api.yml
+++ b/changelogs/fragments/2372-stop_using_connect_to_api.yml
@@ -1,3 +1,5 @@
 minor_changes:
+  - vmware_guest_cross_vc_clone - Stop using ``connect_to_api``
+    (https://github.com/ansible-collections/community.vmware/pull/2372).
   - vmware_guest_instant_clone - Stop using ``connect_to_api``
     (https://github.com/ansible-collections/community.vmware/pull/2372).
