vmware_vm_inventory: Stop using connect_to_api

--- a/changelogs/fragments/2372-stop_using_connect_to_api.yml
+++ b/changelogs/fragments/2372-stop_using_connect_to_api.yml
@@ -3,6 +3,8 @@ minor_changes:
     (https://github.com/ansible-collections/community.vmware/pull/2372).
   - vmware_guest_instant_clone - Stop using ``connect_to_api``
     (https://github.com/ansible-collections/community.vmware/pull/2372).
+  - vmware_vm_inventory - Stop using ``connect_to_api``
+    (https://github.com/ansible-collections/community.vmware/pull/2372).
   - vmware_vsan_cluster - Stop using ``connect_to_api``
     (https://github.com/ansible-collections/community.vmware/pull/2372).
   - vcenter_extension - Stop using ``connect_to_api``
