GHA sanity and unit tests with 2.19

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -81,6 +81,7 @@ jobs:
         # - stable-2.16
           - stable-2.17
           - stable-2.18
+          - stable-2.19
         # - devel
           - milestone
     runs-on: ubuntu-latest
@@ -130,6 +131,7 @@ jobs:
         # - stable-2.16
           - stable-2.17
           - stable-2.18
+          - stable-2.19
         # - devel
           - milestone
 
