--- a/changelogs/fragments/2374-vmware_object_role_permission.yml
+++ b/changelogs/fragments/2374-vmware_object_role_permission.yml
@@ -1,3 +1,3 @@
 minor_changes:
-  - minor_changes - Document setting permissions on vCenter level
+  - vmware_object_role_permission - Document setting permissions on vCenter level
     (https://github.com/ansible-collections/community.vmware/pull/2374).
