--- a/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
@@ -1,10 +1,13 @@
 ---
 - name: Collect the list of the existing VM
-  vmware.vmware_rest.vcenter_vm_info:
-    vcenter_hostname: '{{ vcenter_hostname }}'
-    vcenter_username: '{{ vcenter_username }}'
-    vcenter_password: '{{ vcenter_password }}'
-    vcenter_validate_certs: false
+  vmware.vmware.guest_info:
+    hostname: '{{ vcenter_hostname }}'
+    username: '{{ vcenter_username }}'
+    password: '{{ vcenter_password }}'
+    validate_certs: false
+    schema: vsphere
+    properties:
+      - _moId
   register: existing_vms
   until: existing_vms is not failed
 
