--- a/tests/integration/targets/vmware_guest/tasks/run_test_playbook.yml
+++ b/tests/integration/targets/vmware_guest/tasks/run_test_playbook.yml
@@ -2,11 +2,14 @@
   - include_tasks: '{{ test_playbook }}'
   always:
     - name: Collect the list of the existing VM
-      vmware.vmware_rest.vcenter_vm_info:
-        vcenter_hostname: '{{ vcenter_hostname }}'
-        vcenter_username: '{{ vcenter_username }}'
-        vcenter_password: '{{ vcenter_password }}'
-        vcenter_validate_certs: false
+      vmware.vmware.guest_info:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        validate_certs: false
+        schema: vsphere
+        properties:
+          - _moId
       register: existing_vms
       until: existing_vms is not failed
     - name: Turn off the VM
