--- a/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
@@ -7,33 +7,24 @@
     validate_certs: false
     schema: vsphere
     properties:
-      - _moId
+      - config.instanceUuid
+      - name
   register: existing_vms
   until: existing_vms is not failed
 
-- name: Turn off the VM
-  vmware.vmware.vm_powerstate:
+- name: Delete the VMs
+  community.vmware.vmware_guest:
     hostname: '{{ vcenter_hostname }}'
     username: '{{ vcenter_username }}'
     password: '{{ vcenter_password }}'
     validate_certs: false
-    state: powered-off
-    moid: '{{ item.moid }}'
-  with_items: "{{ existing_vms.guests }}"
-  ignore_errors: true
-
-- name: Delete the VMs
-  vmware.vmware_rest.vcenter_vm:
-    vcenter_hostname: '{{ vcenter_hostname }}'
-    vcenter_username: '{{ vcenter_username }}'
-    vcenter_password: '{{ vcenter_password }}'
-    vcenter_validate_certs: false
+    uuid: '{{ item.config.instanceUuid }}'
     state: absent
-    vm: '{{ item.vm }}'
-  with_items: "{{ existing_vms.value }}"
+    force: true
+    delete_from_inventory: true
+  with_items: "{{ existing_vms.guests }}"
   when:
     - not item.name.startswith("vCLS")
-
 
 - name: Build a list of local libraries
   vmware.vmware_rest.content_locallibrary_info:
