--- a/tests/integration/targets/vmware_guest/tasks/run_test_playbook.yml
+++ b/tests/integration/targets/vmware_guest/tasks/run_test_playbook.yml
@@ -9,27 +9,21 @@
         validate_certs: false
         schema: vsphere
         properties:
-          - _moId
+          - config.instanceUuid
+          - name
       register: existing_vms
       until: existing_vms is not failed
-    - name: Turn off the VM
-      vmware.vmware.vm_powerstate:
+    - name: Clean up VM
+      community.vmware.vmware_guest:
         hostname: '{{ vcenter_hostname }}'
         username: '{{ vcenter_username }}'
         password: '{{ vcenter_password }}'
         validate_certs: false
-        state: powered-off
-        moid: '{{ item.moid }}'
+        uuid: '{{ item.config.instanceUuid }}'
+        state: absent
+        force: true
+        delete_from_inventory: true
       with_items: "{{ existing_vms.guests }}"
       ignore_errors: true
-    - name: Clean up VM
-      vmware.vmware_rest.vcenter_vm:
-        vcenter_hostname: '{{ vcenter_hostname }}'
-        vcenter_username: '{{ vcenter_username }}'
-        vcenter_password: '{{ vcenter_password }}'
-        vcenter_validate_certs: false
-        state: absent
-        vm: '{{ item.vm }}'
-      with_items: "{{ existing_vms.value }}"
       when:
         - not item.name.startswith("vCLS")
