--- a/tests/integration/targets/vmware_guest/tasks/run_test_playbook.yml
+++ b/tests/integration/targets/vmware_guest/tasks/run_test_playbook.yml
@@ -13,6 +13,19 @@
           - name
       register: existing_vms
       until: existing_vms is not failed
+    - name: Turn off the VM
+      community.vmware.vmware_guest_powerstate:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        validate_certs: false
+        uuid: '{{ item.config.instanceUuid }}'
+        state: powered-off
+        force: true
+        use_instance_uuid: true
+      with_items: "{{ existing_vms.guests }}"
+      when:
+        - not item.name.startswith("vCLS")
     - name: Clean up VM
       community.vmware.vmware_guest:
         hostname: '{{ vcenter_hostname }}'
