Fix ansible-core 2.19 compatibility

--- a/tests/integration/targets/inventory_vmware_host_inventory/playbook/build_inventory_without_cache.yml
+++ b/tests/integration/targets/inventory_vmware_host_inventory/playbook/build_inventory_without_cache.yml
@@ -8,6 +8,7 @@
           plugin: community.vmware.vmware_host_inventory
           strict: true
           cache: false
+          enable_backward_compatibility: false
           properties:
             - name
             - summary.runtime.powerState
