--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/build_inventory_with_cache.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/build_inventory_with_cache.yml
@@ -8,4 +8,5 @@
           plugin: community.vmware.vmware_vm_inventory
           strict: false
           cache: true
+          enable_backward_compatibility: false
           properties: [all]
