--- a/tests/integration/targets/vmware_vm_inventory/test_inventory.yml
+++ b/tests/integration/targets/vmware_vm_inventory/test_inventory.yml
@@ -6,5 +6,5 @@
   tasks:
     - assert:
         that:
-            - "{{ groups['debian8_64Guest'] | length }} == 1"
+            - groups['debian8_64Guest'] | length == 1
             - hostvars['test_vm1'] is defined
