--- a/tests/integration/targets/vmware_drs_override/tasks/main.yml
+++ b/tests/integration/targets/vmware_drs_override/tasks/main.yml
@@ -18,6 +18,21 @@
 - name: Set fact for the first VM name
   set_fact:
     first_vm_name: "{{ vm_info.virtual_machines[0].guest_name }}"
+    first_vm_moid: "{{ vm_info.virtual_machines[0].moid }}"
+    first_vm_cluster: "{{ vm_info.virtual_machines[0].cluster }}"
+
+- name: Gather info about the first vm cluster
+  vmware_cluster_info:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    cluster_name: "{{ first_vm_cluster }}"
+  register: cluster_result
+
+- name: Set fact for the DRS
+  set_fact:
+    drs_enabled: "{{ cluster_result['clusters'][first_vm_cluster].enabled_drs }}"
 
 # Test case: Add DRS Override - DRS enabled
 - name: Add DRS override 'manual' for a VM in a DRS-enabled cluster
@@ -45,7 +60,7 @@
     hostname: "{{ vcenter_hostname }}"
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
-    name: "{{ first_vm_name }}"
+    moid: "{{ first_vm_moid }}"
     state: "absent"
   register: drs_override_remove_result
   when: drs_enabled is defined and drs_enabled
@@ -88,11 +103,11 @@
     drs_behavior: "manual"
   register: drs_override_drs_disabled_result
   ignore_errors: true
-  when: drs_disabled is defined and drs_disabled
+  when: drs_enabled is defined and drs_enabled == false
 
 - name: Assert error for DRS-disabled cluster
   assert:
     that:
       - drs_override_drs_disabled_result.failed == true
       - "'DRS is not enabled on the cluster' in drs_override_drs_disabled_result.msg"
-  when: drs_disabled is defined and drs_disabled
+  when: drs_enabled is defined and drs_enabled == false
