Use instance UUID

--- a/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
@@ -36,6 +36,7 @@
     state: absent
     force: true
     delete_from_inventory: true
+    use_instance_uuid: true
   with_items: "{{ existing_vms.guests }}"
   when:
     - not item.name.startswith("vCLS")
