--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -81,6 +81,7 @@ jobs:
           - stable-2.16
           - stable-2.17
           - stable-2.18
+          - stable-2.19
         # - devel
           - milestone
     # Ansible-test on various stable branches does not yet work well with cgroups v2.
@@ -144,6 +145,7 @@ jobs:
           - stable-2.16
           - stable-2.17
           - stable-2.18
+          - stable-2.19
         # - devel
           - milestone
 
