Revert "Remove when: hostvars | length >= 1"

--- a/tests/integration/targets/inventory_vmware_host_inventory/playbook/build_inventory.yml
+++ b/tests/integration/targets/inventory_vmware_host_inventory/playbook/build_inventory.yml
@@ -20,3 +20,4 @@
   - name: Refresh test_host
     set_fact:
       test_host: "{{ hostvars | dict2items | first }}"
+    when: hostvars | length >= 1
