--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -234,6 +234,10 @@ plugin_routing:
       deprecation:
         removal_version: 7.0.0
         warning_text: Use vmware.vmware.local_content_library and vmware.vmware.subscribed_content_library instead.
+    vmware_guest_powerstate:
+      deprecation:
+        removal_version: 7.0.0
+        warning_text: Use vmware.vmware.vm_powerstate instead.
     vmware_host:
       deprecation:
         removal_version: 7.0.0
