stable-4.x: Remove vmware.vmware_rest from integration tests

--- a/tests/integration/targets/prepare_vmware_tests/tasks/main.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: install vmware.vmware
+  shell: "ansible-galaxy collection install 'vmware.vmware<2.0.0'"
+
 - name: load vmware common vars
   include_vars:
     file: common.yml
