--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -236,3 +236,29 @@ releases:
     - 2370-argument_spec.yml
     - 2374-vmware_object_role_permission.yml
     release_date: '2025-04-21'
+  5.7.0:
+    changes:
+      bugfixes:
+      - vm_device_helper - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_guest_controller - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_guest_disk - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_host_inventory - New option ``enable_backward_compatability`` that
+        can be set to ``false`` to work with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_target_canonical_info - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_vm_inventory - New option ``enable_backward_compatability`` that can
+        be set to ``false`` to work with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      deprecated_features:
+      - module_utils.vmware - Deprecate ``connect_to_api`` (https://github.com/ansible-collections/community.vmware/pull/2372).
+      - vmware_guest_powerstate - the module has been deprecated and will be removed
+        in community.vmware 7.0.0 (https://github.com/ansible-collections/community.vmware/pull/2398).
+      minor_changes:
+      - vcenter_extension - Stop using ``connect_to_api`` (https://github.com/ansible-collections/community.vmware/pull/2372).
+      - vmware_guest_cross_vc_clone - Stop using ``connect_to_api`` (https://github.com/ansible-collections/community.vmware/pull/2372).
+      - vmware_guest_instant_clone - Stop using ``connect_to_api`` (https://github.com/ansible-collections/community.vmware/pull/2372).
+      - vmware_vm_inventory - Stop using ``connect_to_api`` (https://github.com/ansible-collections/community.vmware/pull/2372).
+      - vmware_vsan_cluster - Stop using ``connect_to_api`` (https://github.com/ansible-collections/community.vmware/pull/2372).
+    fragments:
+    - 2372-stop_using_connect_to_api.yml
+    - 2391-core-2.19.compatibility.yml
+    - 2398-deprecate-vmware_guest_powerstate.yml
+    release_date: '2025-06-03'
