--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -301,3 +301,17 @@ releases:
     - 2351-vmware_object_role_permission.yml
     - 2357-deprecations.yml
     release_date: '2025-03-23'
+  4.8.4:
+    changes:
+      bugfixes:
+      - vm_device_helper - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_guest_controller - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_guest_disk - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_host_inventory - New option ``enable_backward_compatability`` that
+        can be set to ``false`` to work with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_target_canonical_info - Fix an issue with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+      - vmware_vm_inventory - New option ``enable_backward_compatability`` that can
+        be set to ``false`` to work with ansible-core 2.19 (https://github.com/ansible-collections/community.vmware/pull/2391).
+    fragments:
+    - 2391-core-2.19.compatibility.yml
+    release_date: '2025-06-04'
