--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 requests
 pyVmomi>=6.7.1,<9.0
-git+https://github.com/vmware/vsphere-automation-sdk-python.git ; python_version >= '2.7'  # Python 2.6 is not supported
+git+https://github.com/vmware/vsphere-automation-sdk-python.git@v8.0.3.0 ; python_version >= '2.7'  # Python 2.6 is not supported
