Remove deprecated modules

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -15,13 +15,8 @@ action_groups:
   - vmware_category
   - vmware_category_info
   - vmware_cfg_backup
-  - vmware_cluster
-  - vmware_cluster_dpm
-  - vmware_cluster_drs
-  - vmware_cluster_drs_recommendations
   - vmware_cluster_ha
   - vmware_cluster_info
-  - vmware_cluster_vcls
   - vmware_cluster_vsan
   - vmware_content_deploy_ovf_template
   - vmware_content_deploy_template
@@ -195,19 +190,19 @@ plugin_routing:
         removal_version: 7.0.0
         warning_text: Use vmware.vmware.folder instead.
     vmware_cluster:
-      deprecation:
+      tombstone:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster instead.
     vmware_cluster_dpm:
-      deprecation:
+      tombstone:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_dpm instead.
     vmware_cluster_drs:
-      deprecation:
+      tombstone:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_drs instead.
     vmware_cluster_drs_recommendations:
-      deprecation:
+      tombstone:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_drs_recommendations instead.
     vmware_cluster_info:
@@ -219,7 +214,7 @@ plugin_routing:
         removal_version: 7.0.0
         warning_text: Use vmware.vmware.cluster_ha instead.
     vmware_cluster_vcls:
-      deprecation:
+      tombstone:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_vcls instead.
     vmware_content_deploy_ovf_template:
