--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -79,8 +79,8 @@ jobs:
           # consider dropping testing against EOL versions and versions you don't support.
         # - stable-2.15
         # - stable-2.16
-          - stable-2.17
-          - stable-2.18
+        # - stable-2.17
+        # - stable-2.18
           - stable-2.19
         # - devel
           - milestone
@@ -129,8 +129,8 @@ jobs:
           # consider dropping testing against EOL versions and versions you don't support.
         # - stable-2.15
         # - stable-2.16
-          - stable-2.17
-          - stable-2.18
+        # - stable-2.17
+        # - stable-2.18
           - stable-2.19
         # - devel
           - milestone
