--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -82,7 +82,7 @@ jobs:
           - stable-2.17
           - stable-2.18
           - stable-2.19
-        # - devel
+          - devel
           - milestone
     runs-on: ubuntu-latest
 
@@ -132,7 +132,7 @@ jobs:
           - stable-2.17
           - stable-2.18
           - stable-2.19
-        # - devel
+          - devel
           - milestone
 
     steps:
