--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -82,7 +82,7 @@ jobs:
           - stable-2.17
           - stable-2.18
           - stable-2.19
-        # - devel
+          - devel
           - milestone
     # Ansible-test on various stable branches does not yet work well with cgroups v2.
     # Since ubuntu-latest now uses Ubuntu 22.04, we need to fall back to the ubuntu-20.04
@@ -146,7 +146,7 @@ jobs:
           - stable-2.17
           - stable-2.18
           - stable-2.19
-        # - devel
+          - devel
           - milestone
 
     steps:
