--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -295,3 +295,15 @@ releases:
     fragments:
     - 2451-vcenter_license_vcf_support.yml
     release_date: '2025-09-07'
+  5.9.0:
+    changes:
+      bugfixes:
+      - vmware_guest_file_operation - fix ``replace() argument 2 must be str, not
+        int`` error (https://github.com/ansible-collections/community.vmware/issues/2447).
+      - vmware_tools - fix ``replace() argument 2 must be str, not int`` error (https://github.com/ansible-collections/community.vmware/issues/2447).
+      minor_changes:
+      - vsphere_file - Remove ``ansible.module_utils.six.PY2`` (https://github.com/ansible-collections/community.vmware/pull/2476).
+    fragments:
+    - 2447-vmware_guest_file_operations_fix.yml
+    - 2476-remove-ansible.module_utils.six.PY2.yml
+    release_date: '2025-09-17'
