--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -82,6 +82,7 @@ jobs:
           - stable-2.17
           - stable-2.18
           - stable-2.19
+          - stable-2.20
         # - devel
           - milestone
     runs-on: ubuntu-latest
@@ -132,6 +133,7 @@ jobs:
           - stable-2.17
           - stable-2.18
           - stable-2.19
+          - stable-2.20
         # - devel
           - milestone
 
