--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -77,6 +77,20 @@ releases:
     - 2217-deprecate-vmware_cluster_dpm.yml
     - 2218-deprecate-vmware_cluster_drs_recommendations.yml
     release_date: '2024-11-01'
+  5.10.0:
+    changes:
+      major_changes:
+      - Replace ``ansible.module_utils._text`` (https://github.com/ansible-collections/community.vmware/issues/2497).
+      - Replace ``ansible.module_utils.common._collections_compat`` (https://github.com/ansible-collections/community.vmware/issues/2497).
+      - Replace ``ansible.module_utils.six`` (https://github.com/ansible-collections/community.vmware/pull/2495).
+      minor_changes:
+      - vmware_dvs_portgroup - add ``portgroup_description`` parameter (https://github.com/ansible-collections/community.vmware/issues/2487).
+    fragments:
+    - 2487-vmware_dvs_portgroup_feature.yaml
+    - 2495-drop_ansible.module_utils.six.yml
+    - 2504-replace-ansible.module_utils.common._collections_compat.yml
+    - 2504-replace_ansible.module_utils._text.yml
+    release_date: '2025-11-02'
   5.2.0:
     changes:
       bugfixes:
