--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -29,6 +29,7 @@ action_groups:
   - vmware_datastore
   - vmware_datastore_cluster
   - vmware_datastore_cluster_manager
+  - vmware_datastore_cluster_sdrs_info
   - vmware_datastore_info
   - vmware_datastore_maintenancemode
   - vmware_deploy_ovf
