tools/*: Drop unnecessarily gathering facts

--- a/tools/prepare_release.yml
+++ b/tools/prepare_release.yml
@@ -1,5 +1,6 @@
 - name: Prepare release
   hosts: localhost
+  gather_facts: false
   tasks:
     - name: Generate version
       when: version is not defined
